# mc833

./: .gitignore  CMakeLists.txt
projeto/: CMakeLists.txt  README  client.c  guidelines.txt  projeto-ra093125-ra093175.tex  server.c
projeto/Debug/: client  server
projeto/classes/: Group.cpp  Group.h  Message.cpp  Message.h  User.cpp  User.h
projeto/client/: Makefile  client-cli.cpp
projeto/server/: Makefile  server.cpp  server_pthreads.cpp  server_select.cpp
t1/: exercicio1-ra093175.aux  exercicio1-ra093175.out  exercicio1-ra093175.tex  exercicio1-ra093175.toc
t2/: exercicio2-ra093175.aux  exercicio2-ra093175.out  exercicio2-ra093175.tex  exercicio2-ra093175.toc  outfile-ip.txt  outfile-mac.txt  outfile.txt
t3/: client.c  exercicio3-ra093125-ra093175.tex  server.c
t3/testing/: client.c  server.c
t4/: client  client.c  links.txt  server  server.c  tarefa4-ra093125-ra093175.tex
t5/: client  client-t3.c  client-t4.c  echo_server_select_tcp.c  references.txt  select-example.c  tarefa5-ra093125-ra093175.tex
t6/: 5client_udp.c  Aclient_udp.c  Aserver_udp.c  Bclient_udp.c  client_udp.c  server_udp.c  tarefa6-ra093125-ra093175.tex
t7/: client.c  server.c  tarefa7-ra093125-ra093175.tex
